--- a/docker_config_files/nginx/conf.d/app.conf
+++ b/docker_config_files/nginx/conf.d/app.conf
@@ -18,6 +18,31 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+
+    ## Whitelist
+    location ~ ^/favicon\.ico { try_files $uri /index.php; }
+    location ~ ^/sitemap\.xml { try_files $uri /index.php; }
+
+    ## Block all .dotfiles except well-known
+    location ~ /\.(?!well-known).* { deny all; }
+
+    ### Let nginx return 404 if static file does not exists
+    location ~ ^/assets/media { try_files $uri 404; }
+    location ~ ^/storage/temp/public { try_files $uri 404; }
+
+    location ~ ^/app/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/actions/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/dashboardwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/formwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/widgets/.*/assets { try_files $uri 404; }
+
+    location ~ ^/extensions/.*/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/actions/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/dashboardwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/formwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/widgets/.*/assets { try_files $uri 404; }
+
+    location ~ ^/themes/.*/assets { try_files $uri 404; }
 }
 
 server {
@@ -40,4 +65,31 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
         gzip_static on;
     }
+    ## Whitelist
+    location ~ ^/favicon\.ico { try_files $uri /index.php; }
+    location ~ ^/sitemap\.xml { try_files $uri /index.php; }
+
+    ## Block all .dotfiles except well-known
+    location ~ /\.(?!well-known).* { deny all; }
+
+    ### Let nginx return 404 if static file does not exists
+    location ~ ^/assets/media { try_files $uri 404; }
+    location ~ ^/storage/temp/public { try_files $uri 404; }
+
+    location ~ ^/app/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/actions/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/dashboardwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/formwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/app/.*/widgets/.*/assets { try_files $uri 404; }
+
+    location ~ ^/extensions/.*/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/actions/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/dashboardwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/formwidgets/.*/assets { try_files $uri 404; }
+    location ~ ^/extensions/.*/.*/widgets/.*/assets { try_files $uri 404; }
+
+    location ~ ^/themes/.*/assets { try_files $uri 404; }
+
+
+
 }
